[gd_scene load_steps=16 format=3 uid="uid://54mlahj1p1ey"]

[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/scenes/load_screen_scene.gd" id="1_otrv4"]
[ext_resource type="Texture2D" uid="uid://c8kblejm0yf32" path="res://ui/test-sprite.png" id="2_18my2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_odkrm"]
atlas = ExtResource("2_18my2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdmy2"]
atlas = ExtResource("2_18my2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4gli"]
atlas = ExtResource("2_18my2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec85j"]
atlas = ExtResource("2_18my2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxur8"]
atlas = ExtResource("2_18my2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjiba"]
atlas = ExtResource("2_18my2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8jxw"]
atlas = ExtResource("2_18my2")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_310ql"]
atlas = ExtResource("2_18my2")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_whkm3"]
atlas = ExtResource("2_18my2")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijdc"]
atlas = ExtResource("2_18my2")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v468g"]
atlas = ExtResource("2_18my2")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_63xvb"]
atlas = ExtResource("2_18my2")
region = Rect2(1100, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_2q7v8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_odkrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdmy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4gli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec85j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxur8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjiba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8jxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_310ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whkm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v468g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63xvb")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="LoadScreenScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_otrv4")
tooltips = Array[String](["Peasants can be knocked up with your fire bolt attack.", "YOUR GOAL: Turn the Village into a smoldering, fiery mess."])

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -412.0
offset_top = -142.685
offset_right = 412.0
offset_bottom = -115.685
grow_horizontal = 2
grow_vertical = 0

[node name="TopBlackBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 77.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="BottomBlackBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -78.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="TooltipLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -211.0
offset_top = -50.86
offset_right = 211.0
offset_bottom = -27.8594
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressAnyKeyLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -11.5001
offset_right = 105.5
offset_bottom = 11.5001
grow_horizontal = 2
grow_vertical = 2
text = "Press any key to continue..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.8
offset_top = -50.86
offset_right = -65.8
offset_bottom = -27.86
grow_horizontal = 0
grow_vertical = 0
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="LoadingLabel"]
position = Vector2(97.9351, 11.86)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_2q7v8")
autoplay = "default"
frame_progress = 0.204178
